# queuestack

./: .gitignore  .homebrew-publish  .publish  .publish-homebrew  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: homebrew-release.yml  homebrew-tap.yaml  linux-release.yml  release.yml
docs/: ARCHITECTURE.md
scripts/: install-hooks.sh
src/: constants.rs  editor.rs  lib.rs  main.rs  ui.rs
src/commands/: attach.rs  attachments.rs  categories.rs  close.rs  completions.rs  get.rs  init.rs  labels.rs  list.rs  mod.rs  new.rs  search.rs  setup.rs  update.rs
src/config/: global.rs  mod.rs  project.rs
src/id/: base32.rs  mod.rs
src/item/: mod.rs  parser.rs  search.rs  slug.rs
src/storage/: git.rs  mod.rs
src/tui/: mod.rs
src/tui/screens/: confirm.rs  item_actions.rs  mod.rs  prompt.rs  select.rs  wizard.rs
src/tui/widgets/: action_menu.rs  filter_overlay.rs  mod.rs  multi_select.rs  select_list.rs  text_area.rs  text_input.rs
tests/: attach.rs  categories.rs  close.rs  config.rs  edge_cases.rs  harness.rs  integration.rs  labels.rs  list.rs  new.rs  output_format.rs  search.rs  update.rs
tests/common/: mod.rs
