[package]
name = "queuestack"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["Dominic Rodemer"]
license = "MIT"
description = "Minimal, scriptable task and issue tracker for agent-driven workflows"
repository = "https://github.com/domzilla/queuestack"
readme = "README.md"
keywords = ["cli", "task", "issue", "tracker", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "qs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
walkdir = "2"
dirs = "6"
rand = "0.9"
owo-colors = "4"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
shlex = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allowed lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
